...
            </Animated.View>
          </View>

          <Animated.View
            style={[styles.footer, buttonAnimatedStyle]}
            pointerEvents="none"
            testID="celebration-continue"
          >
            <View style={styles.button}>
              <Text variant="subheadBold" color="onPrimary">
                Continue
              </Text>
            </View>
...
